<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">First</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">hello world, HelloAndroidActivity</string>
    <string name="love">I\'m In Love</string>
    <string name="type1">Type here </string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_next">Next</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="strawberry">Strawberry</string>
    <string name="watermelon">Water Melon</string>
    <string name="title_activity_image">ImageActivity</string>

    <string name="fontSize">Font Size</string>
    <string name="fontColor">Font Color</string>
    <string name="btn_dial">다이얼 윈도우 열기</string>
    <string name="btn_browser">인터넷 하기</string>
</resources>