<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <Button
        android:id="@+id/aplBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple" />

    <Button
        android:id="@+id/stbBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/aplBtn"
        android:text="@string/strawberry" />

    <Button
        android:id="@+id/wmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/stbBtn"
        android:text="@string/watermelon" />

	<ImageView
	    android:id="@+id/imgLayer"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/aplBtn"
	    android:src="@drawable/apple" />

</RelativeLayout>