<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:text="@string/type1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <EditText android:text="" android:id="@+id/entry"
        android:layout_below="@id/label" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        
	    <Button android:id="@+id/cancel"
	        android:layout_below="@id/entry" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_alignParentRight="true"
	        android:text="@string/btn_cancel" />
	    
	    <Button android:id="@+id/OK"
	        android:layout_below="@id/entry" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_toLeftOf="@id/cancel"
	        android:layout_alignTop="@id/cancel"
	        android:text="@string/btn_ok" />
	    
	    <Button android:id="@+id/Finish"
	        android:layout_below="@id/entry" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_toLeftOf="@id/OK"
	        android:layout_alignTop="@id/cancel"
	        android:text="@string/btn_finish" />
	    </LinearLayout>
    
    <TextView
        android:id="@+id/print"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    
</LinearLayout>
